[gd_scene load_steps=7 format=3 uid="uid://bsbtpp84pdo2k"]

[ext_resource type="Script" uid="uid://ctk3x4oq5rhwb" path="res://ui/GameUI.gd" id="1_7r27d"]
[ext_resource type="LabelSettings" uid="uid://bni65b3dleov0" path="res://ui/label_theme.tres" id="2_6vdb0"]
[ext_resource type="FontFile" uid="uid://b7540wfbnwj2d" path="res://assets/fonts/Scabber-q2Mn0.ttf" id="3_ye8ga"]

[sub_resource type="LabelSettings" id="LabelSettings_0b514"]
font = ExtResource("3_ye8ga")
font_size = 128
shadow_size = 15
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_ye8ga"]
default_font = ExtResource("3_ye8ga")

[sub_resource type="Theme" id="Theme_0b514"]
default_font = ExtResource("3_ye8ga")

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7r27d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CheckpointLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Current Checkpoint: Null"
label_settings = ExtResource("2_6vdb0")

[node name="TimeRemainingLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Time remaining: Null"
label_settings = ExtResource("2_6vdb0")

[node name="PauseMenu" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -392.0
offset_top = -64.5
offset_right = 392.0
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 2

[node name="GameStateLabel" type="Label" parent="PauseMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_0b514")
horizontal_alignment = 1

[node name="NextLevelButton" type="Button" parent="PauseMenu/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ye8ga")
text = "Next Level"

[node name="RestartButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ye8ga")
text = "Restart"

[node name="QuitButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_0b514")
text = "Quit"

[connection signal="pressed" from="PauseMenu/VBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
